syntax = "proto3";

package scuffle.platform.internal.types;

import "scuffle/platform/internal/types/image_format.proto";

message ProcessedImageVariant {
  uint32 width = 1;
  uint32 height = 2;
  ImageFormat format = 3;
  uint32 scale = 4;
  uint32 byte_size = 5;
  string path = 6;
}
